state/cavern/bazarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: bazarr
  name: bazarr
  namespace: cavern
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: bazarr
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bazarr
    spec:
      automountServiceAccountToken: false
      containers:
      - name: bazarr
        image: linuxserver/bazarr:latest
        ports:
        - name: http
          containerPort: 6767
          protocol: TCP
        # livenessProbe:
        #   httpGet:
        #     path: /
        #     port: http
        # readinessProbe:
        #   failureThreshold: 3
        #   httpGet:
        #     path: /
        #     port: http
        resources:
          requests:
            cpu: 500m
            memory: 512Mi
          limits:
            cpu: 2000m
            memory: 2Gi
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /mnt/media
          name: media
      volumes:
      - name: config
        hostPath:
          path: /data/bazarr
      - name: media
        persistentVolumeClaim:
          claimName: media
